--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riproduzione di un vero sito: un tema di Wordpress</title>
+    <title>Neori</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="title"></div>
+            <img src="img/logo.png" alt="logo pagina web">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">FEATTURES</a>
+                        <a href="#">EDITORIALS</a>
+                        <a href="#">ENVIRONMENT</a>
+                        <a href="#">BLOG</a>
+                        <a href="#">SHOP</a>
+                        <a href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </nav>
+            
         </header>
     
         <main>
