add section box-img and footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Neori</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -38,18 +38,36 @@
                 </div>
             </section>
             <section class="box-img">
-                <div class="box-title"></div>
+                <div class="box-title">
+                    <h2>Leadership</h2>
+                    <small>Fertenum urna a libero tempus</small>
+                </div>
                 <div class="columns clearfix">
-                    <div class="col-left"></div>
-                    <div class="col-middle"></div>
-                    <div class="col-right"></div>
+                    <div class="col-left">
+                        <div class="img-left"></div>
+                        <h5>Lorem</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia officiis minima? Rerum impedit, nihil repudiandae labore libero odio nemo. Vero eveniet odio exercitationem facilis perspiciatis? Ullam fugiat dolores modi?</p>
+                    </div>
+                    <div class="col-middle">
+                        <div class="img-middle"></div>
+                        <h5>Ipsum</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore saepe autem ipsam voluptatem nostrum! Impedit beatae laboriosam reprehenderit sint cupiditate hic dicta temporibus quisquam? Accusamus, eaque! Natus illum incidunt harum.
+                        Quis, nam vero. At nisi nemo natus deserunt molestias! Eaque inventore velit autem. Temporibus assumenda nihil dolores quibusdam suscipit ut voluptatum quam perferendis. Consequatur veritatis, qui illum blanditiis voluptatum obcaecati?
+                        Sed ab distinctio sequi nesciunt molestiae ipsa voluptas, accusamus error laudantium fuga iure eaque porro rem voluptatum quia delectus accusantium eius eligendi! Debitis, eos soluta aperiam doloribus optio modi eligendi.
+                        Ipsa optio praesentium obcaecati deleniti error, sunt temporibus ea ab facilis, ipsum quisquam consectetur nemo, suscipit possimus vel laborum voluptatibus autem fugit fuga molestias modi perferendis? Facere, iusto. Suscipit, veniam.</p>
+                    </div>
+                    <div class="col-right">
+                        <div class="img-right"></div>
+                        <h5>Lorem</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia officiis minima? Rerum impedit, nihil repudiandae labore libero odio nemo. Vero eveniet odio exercitationem facilis perspiciatis? Ullam fugiat dolores modi?</p>
+                    </div>
                 </div>
             </section>
         </main>
         <!-- /corpo della pagina -->
         <!-- pie di pagina -->
         <footer>
-
+            Designed with <span>&#10084;</span>
         </footer>
         <!-- /pie di pagina -->
     </div>
