--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!-- corpo della pagina -->
         <main>
             <section class="yoga">
+                <div class="overlay"></div>
                 <div class="yoga-text">
                     <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut viverra nisl rutrum, pretium lectus nec, sagittis dolor. Phasellus eleifend efficitur...</p>
@@ -44,12 +45,16 @@
                 </div>
                 <div class="columns clearfix">
                     <div class="col-left">
-                        <div class="img-left"></div>
+                        <div class="img-left">
+                            <div class="overlay"></div>
+                        </div>
                         <h5>Lorem</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia officiis minima? Rerum impedit, nihil repudiandae labore libero odio nemo. Vero eveniet odio exercitationem facilis perspiciatis? Ullam fugiat dolores modi?</p>
                     </div>
                     <div class="col-middle">
-                        <div class="img-middle"></div>
+                        <div class="img-middle">
+                            <div class="overlay"></div>
+                        </div>
                         <h5>Ipsum</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore saepe autem ipsam voluptatem nostrum! Impedit beatae laboriosam reprehenderit sint cupiditate hic dicta temporibus quisquam? Accusamus, eaque! Natus illum incidunt harum.
                         Quis, nam vero. At nisi nemo natus deserunt molestias! Eaque inventore velit autem. Temporibus assumenda nihil dolores quibusdam suscipit ut voluptatum quam perferendis. Consequatur veritatis, qui illum blanditiis voluptatum obcaecati?
@@ -57,7 +62,9 @@
                         Ipsa optio praesentium obcaecati deleniti error, sunt temporibus ea ab facilis, ipsum quisquam consectetur nemo, suscipit possimus vel laborum voluptatibus autem fugit fuga molestias modi perferendis? Facere, iusto. Suscipit, veniam.</p>
                     </div>
                     <div class="col-right">
-                        <div class="img-right"></div>
+                        <div class="img-right">
+                            <div class="overlay"></div>
+                        </div>
                         <h5>Lorem</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia officiis minima? Rerum impedit, nihil repudiandae labore libero odio nemo. Vero eveniet odio exercitationem facilis perspiciatis? Ullam fugiat dolores modi?</p>
                     </div>
